# datapipe-label-studio-lite

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: pytest.yaml
datapipe_label_studio_lite/: __init__.py  create_projects_step.py  pipeline.backup.py  pipeline.py  prediction_pipeline.py  sdk_utils.py  types.py  upload_predictions_pipeline.py  upload_tasks_pipeline.py  utils.py
datapipe_label_studio_lite/migrations/: oldLabelStudioStep_0_3_0_to_LabelStudioUploadTasks_0_4_0.py
experiments/2023-01-12-get-new-annotated-tasks/: main.py
tests/: conftest.py  docker-compose.yml  ls_test_helpers.py  test_pipeline.py  test_pipeline_many_projects.py  util.py
