[tool.poetry]
name = "datapipe_label_studio_lite"
version = "0.1.0"
description = ""
authors = ["Alexander Kozlov <bobokvsky@epoch8.co>"]

exclude=["tests", "examples"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pandas = "^1.2.0"
numpy = "^1.21.0"
SQLAlchemy = "^1.4.25"
tqdm = "^4.60.0"
requests = "^2.24.0"
datapipe-core = "^0.11.9"
iteration-utilities = "^0.11.0"
label-studio-sdk = "^0.0.16"

pysqlite3-binary = {version="^0.5.0", optional=true}
sqlalchemy-pysqlite3-binary = {version="^0.0.4", optional=true}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-xdist = "*"
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^21.7b0"
pandas-stubs = "^1.2.0"
types-requests = "^2.25.6"
pytest-cases = "^3.6.4"
types-setuptools = "^57.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
sqlite = ["pysqlite3-binary", "sqlalchemy-pysqlite3-binary"]
