[tool.poetry]
name = "datapipe-label-studio-lite"
version = "0.4.0-alpha.1"
description = ""
authors = [
    "Alexander Kozlov <bobokvsky@epoch8.co>",
    "Andrey Tatarinov <a@tatarinov.co>",
]

exclude = ["tests", "experiments"]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pandas = ">=1.2.0"
numpy = ">=1.21.0"
SQLAlchemy = ">=1.4.25"
requests = ">=2.24.0"
datapipe-core = { path = "../datapipe", develop = true }
label-studio-sdk = ">=2.0.0, <3.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
black = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cases = "^3.6.4"

mypy = "*"
pandas-stubs = "*"
types-requests = "*"
types-setuptools = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
